syntax = "proto3";

package contracts.services.cards;

import "contracts/services/cards/rpc_get_card.proto";
import "contracts/services/cards/rpc_get_cards.proto";

service CardsService {
  rpc GetCard (GetCardRequest) returns (GetCardResponse);
  rpc GetCards (GetCardsRequest) returns (GetCardsResponse);
}